syntax = "proto3";

option csharp_namespace = "combined";

service FullEmployeeService{
		rpc GetEmployee(EmployeeRequest) returns(EmployeeReply);
		rpc StreamAllEmployees(Empty) returns(stream EmployeeReply);
		rpc AddEmployees(stream EmployeeRequest) returns(EmployeeSummary);
		rpc Chat(stream chatMessage) returns(stream chatMessage);
}

message EmployeeReply {
	int32 id = 1;
	string name = 2;
}

message EmployeeRequest {
	int32 id = 1;
	string name = 2;
}

message Empty {}
message chatMessage {
	int32 id = 1; // Field with ID = 1
	string name = 2; // Field with ID = 2
	string message = 3; // Field with ID = 3
}

message EmployeeSummary {
	int32 total = 1; // Total number of employees added
}


